added screen capture

--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
                 <h1 class="header-text">Things I do every day</h1>
             </div>
         </header>
+        <!--main content with the embedded video from Youtube-->
         <main>
-            <h2>Things I do everyday</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis aliquid ut dolorum! Exercitationem
-                temporibus
-                repudiandae fuga tenetur harum deleniti asperiores mollitia itaque adipisci, odit beatae quia a laborum
-                architecto unde nisi magnam quibusdam aspernatur porro laudantium minus eveniet iusto! Voluptate cumque
-                adipisci dolorum reprehenderit labore eaque dicta magni consectetur veritatis?</p>
+            <h2>Moment 1.2 - rörlig bild</h2>
+            <p>Här är min videoinspelning om hur jag jobbat med denna sida och dess headerbild!</p>
+            <p>Detta är första gången jag gör en screencapture så jag försöker hålla den röda tråden och inte bli alltför
+                distraherad av allt jag gör på skärmen, men det gick att göra ändå :)</p>
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/a5fL47qMdl0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
         </main>
     </div>
 </body>
